# CPP-Simple-Math-Interpreter-V2

./: CMakeLists.txt  LICENSE  README.md  compile.txt  interpreter.cpp  interpreter.h  main.cpp  values.cpp  values.h
